--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -29,6 +29,11 @@
   width: 150px;
   height: auto;
   margin: 10px;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 .card-icons {
   position: relative;
